# sandbox

./: .gitignore  LICENSE  Makefile  README.md  a.out  build.sh  main.cpp
compression/: lz77.cpp  lz77.h
deflate/: CMakeLists.txt  main.cpp  tester.cpp
deflate/include/: lz77.h
deflate/lib/: CMakeLists.txt  lz77.cpp
encryption/: RSA.c  elgamal.c
graphic/: graphic.cpp  graphic.h
lifegame/: acorn  flyer  galaxy  lifegame.cpp  r-pentomino
math/: tmath.h
object/: graphic.d
pythonlikezip/: zip.cpp
rangeloop/: rangeloop.c  rangeloop.h
